--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
                         <a class="nav-link page-scroll" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#testimonials">Testimonials</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -112,7 +109,7 @@
                                             </span>
                                             <div class="media-body">
                                                 <h4>Snappy</h4>
-                                                <p>Clean and crisp UIs, easing the user their way to every feature like a breeze</p>
+                                                <p>Clean and crisp UIs, easing your way to every feature like a breeze</p>
                                             </div>
                                         </li>
                                         <li class="media">
@@ -122,7 +119,7 @@
                                             </span>
                                             <div class="media-body">
                                                 <h4>Responsive</h4>
-                                                <p>Fits like a charm to any device, be it a desktop, a tab or a smartphone</p>
+                                                <p>Fits like a charm to any device, be it a desktop, a tab or a mobile</p>
                                             </div>
                                         </li>
                                         <li class="media">
@@ -132,7 +129,7 @@
                                             </span>
                                             <div class="media-body">
                                                 <h4>Optimized</h4>
-                                                <p>Finely calibrated for the best possible experience with the least load</p>
+                                                <p>Finely calibrated for the best experience with the least load</p>
                                             </div>
                                         </li>
                                     </ul>
@@ -158,7 +155,7 @@
                                             </span>
                                             <div class="media-body">
                                                 <h4>Component-rich</h4>
-                                                <p>Gorgeous yet graceful choice visual components for the right amount of awe</p>
+                                                <p>Gorgeous yet graceful components for the right amount of visual awe</p>
                                             </div>
                                         </li>
                                         <li class="media">
@@ -303,21 +300,11 @@
                                         <li class="media">
                                             <span class="fa-stack">
                                                 <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="fas fa-star fa-stack-1x"></i>
+                                                <i class="fas fa-cubes fa-stack-1x"></i>
                                             </span>
                                             <div class="media-body">
-                                                <h4>??</h4>
-                                                <p>voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint</p>
-                                            </div>
-                                        </li>
-                                        <li class="media">
-                                            <span class="fa-stack">
-                                                <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="fas fa-star fa-stack-1x"></i>
-                                            </span>
-                                            <div class="media-body">
-                                                <h4>??</h4>
-                                                <p>cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                                                <h4>Modular</h4>
+                                                <p>Multifaceted components, easily integrable with no hassle at all</p>
                                             </div>
                                         </li>
                                         <li class="media">
@@ -383,8 +370,8 @@
                                                 <i class="fa fa-server fa-stack-1x"></i>
                                             </span>
                                             <div class="media-body">
-                                                <h4>Server-side optimization</h4>
-                                                <p>??</p>
+                                                <h4>Server optimization</h4>
+                                                <p>Making the most of your server with the highest quality software</p>
                                             </div>
                                         </li>
                                         <li class="media">
@@ -394,17 +381,7 @@
                                             </span>
                                             <div class="media-body">
                                                 <h4>Tech support</h4>
-                                                <p>??</p>
-                                            </div>
-                                        </li>
-                                        <li class="media">
-                                            <span class="fa-stack">
-                                                <i class="fas fa-circle fa-stack-2x"></i>
-                                                <i class="fa fa-star fa-stack-1x"></i>
-                                            </span>
-                                            <div class="media-body">
-                                                <h4>??</h4>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+                                                <p>On-call assistance, with the best of remote support</p>
                                             </div>
                                         </li>
                                     </ul>
@@ -460,10 +437,10 @@
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <a href="images/screenshot-4.jpg" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/screenshot-4.jpg" alt="alternative">
+                                    <a href="images/screenshot-6.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/screenshot-6.jpg" alt="alternative">
                                     </a>
-                                    <a class="swiper-subtitle" target="_blank" href="https://avayaa.org">Avayaa</a>
+                                    <a class="swiper-subtitle" target="_blank" href="https://niengineeringbd.com">N. I. Engineering Services</a>
                                 </div>
 
                                 <div class="swiper-slide">
@@ -471,6 +448,13 @@
                                         <img class="img-fluid" src="images/screenshot-5.jpg" alt="alternative">
                                     </a>
                                     <a class="swiper-subtitle" target="_blank" href="https://mrczstore.com">Mercenariez store</a>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <a href="images/screenshot-4.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/screenshot-4.jpg" alt="alternative">
+                                    </a>
+                                    <a class="swiper-subtitle" target="_blank" href="https://avayaa.org">Avayaa</a>
                                 </div>
 
                             </div>
@@ -488,7 +472,7 @@
 
 
     <!-- Testimonials -->
-    <div id="testimonials" class="slider-1 bg-dark-blue">
+    <div class="slider-1 bg-dark-blue">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -500,70 +484,15 @@
 
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/user-icon.png" alt="alternative">
+                                        <img class="card-image" src="images/client-1.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <p class="testimonial-text">I just finished my trial period and was so amazed with the support and good results that I purchased Leno.</p>
-                                            <p class="testimonial-author">Jude Thorn - Designer</p>
+                                            <p class="testimonial-text">Excellent service, reasonable price and fast response. We are very happy with the service.</p>
+                                            <p class="testimonial-author"> Md. Ismail Hossain<br>Managing Director & CEO,<br>N. I. Engineering Services</p>
                                         </div>
                                     </div>
-                                </div> <!-- end of swiper-slide -->
+                                </div>
 
-                                <div class="swiper-slide">
-                                    <div class="card">
-                                        <img class="card-image" src="images/user-icon.png" alt="alternative">
-                                        <div class="card-body">
-                                            <p class="testimonial-text">I don't know how I managed to get work done without Leno. The speed of this application is amazing!</p>
-                                            <p class="testimonial-author">Roy Smith - Developer</p>
-                                        </div>
-                                    </div>
-                                </div> <!-- end of swiper-slide -->
-
-                                <div class="swiper-slide">
-                                    <div class="card">
-                                        <img class="card-image" src="images/user-icon.png" alt="alternative">
-                                        <div class="card-body">
-                                            <p class="testimonial-text">This app has the potential of becoming a mandatory tool in every marketer's day to day operations flow.</p>
-                                            <p class="testimonial-author">Marsha Singer - Marketer</p>
-                                        </div>
-                                    </div>
-                                </div> <!-- end of swiper-slide -->
-
-                                <div class="swiper-slide">
-                                    <div class="card">
-                                        <img class="card-image" src="images/user-icon.png" alt="alternative">
-                                        <div class="card-body">
-                                            <p class="testimonial-text">Searching for a great marketing automation app was difficult but thankfully I found Leno.</p>
-                                            <p class="testimonial-author">Tim Shaw - Designer</p>
-                                        </div>
-                                    </div>
-                                </div> <!-- end of swiper-slide -->
-
-                                <div class="swiper-slide">
-                                    <div class="card">
-                                        <img class="card-image" src="images/user-icon.png" alt="alternative">
-                                        <div class="card-body">
-                                            <p class="testimonial-text">Leno's support team is amazing. They've helped me with some issues and I am so grateful for their fast response.</p>
-                                            <p class="testimonial-author">Lindsay Spice - Marketer</p>
-                                        </div>
-                                    </div>
-                                </div> <!-- end of swiper-slide -->
-
-                                <div class="swiper-slide">
-                                    <div class="card">
-                                        <img class="card-image" src="images/user-icon.png" alt="alternative">
-                                        <div class="card-body">
-                                            <p class="testimonial-text">Who would have thought that Leno can provide such amazing results in just a few weeks with an easy learning curve.</p>
-                                            <p class="testimonial-author">Ann Blake - Developer</p>
-                                        </div>
-                                    </div>
-                                </div> <!-- end of swiper-slide -->
-
-                            </div> <!-- end of swiper-wrapper -->
-
-                            <!-- Add Arrows -->
-                            <div class="swiper-button-next"></div>
-                            <div class="swiper-button-prev"></div>
-                            <!-- end of add arrows -->
+                            </div>
 
                         </div>
                     </div>
