--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                         <a class="nav-link page-scroll" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link page-scroll" href="./blog">Blog</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
