Anannya added as a project

--- a/index.html
+++ b/index.html
@@ -419,43 +419,50 @@
                             <div class="swiper-wrapper">
 
                                 <div class="swiper-slide">
-                                    <a href="images/screenshot-1.jpg" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/screenshot-1.jpg" alt="alternative">
+                                    <a href="images/anannya.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/anannya.jpg" alt="Official website of Anannya Prokashoni">
+                                    </a>
+                                    <a class="swiper-subtitle" target="_blank" href="https://anannyabooks.com/">Anannya Prokashoni</a>
+                                </div>
+
+                                <div class="swiper-slide">
+                                    <a href="images/boil.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/boil.jpg" alt="Official website of Bangladesh Open Innovation Lab (BOIL)">
                                     </a>
                                     <a class="swiper-subtitle" target="_blank" href="https://boiledbhoot.com">Bangladesh Open Innovation Lab (BOIL)</a>
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <a href="images/screenshot-2.jpg" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/screenshot-2.jpg" alt="alternative">
+                                    <a href="images/osmbdf.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/osmbdf.jpg" alt="Official website of OpenStreetMap Bangladesh Foundation (OSMBDF)">
                                     </a>
                                     <a class="swiper-subtitle" target="_blank" href="https://osmbdf.org">OpenStreetMap Bangladesh Foundation (OSMBDF)</a>
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <a href="images/screenshot-3.jpg" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/screenshot-3.jpg" alt="alternative">
+                                    <a href="images/covid.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/covid.jpg" alt="COVID-19 map of Bangladesh">
                                     </a>
-                                    <a class="swiper-subtitle" target="_blank" href="https://covid19.boiledbhoot.com">COVID19 map, Bangladesh</a>
+                                    <a class="swiper-subtitle" target="_blank" href="https://covid19.boiledbhoot.com">COVID-19 map, Bangladesh</a>
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <a href="images/screenshot-6.jpg" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/screenshot-6.jpg" alt="alternative">
+                                    <a href="images/nies.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/nies.jpg" alt="Official website of N. I. Engineering Services">
                                     </a>
                                     <a class="swiper-subtitle" target="_blank" href="https://niengineeringbd.com">N. I. Engineering Services</a>
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <a href="images/screenshot-5.jpg" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/screenshot-5.jpg" alt="alternative">
+                                    <a href="images/mercenariez.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/mercenariez.jpg" alt="Official website of Mercenariez store">
                                     </a>
                                     <a class="swiper-subtitle" target="_blank" href="https://mrczstore.com">Mercenariez store</a>
                                 </div>
 
                                 <div class="swiper-slide">
-                                    <a href="images/screenshot-4.jpg" class="popup-link" data-effect="fadeIn">
-                                        <img class="img-fluid" src="images/screenshot-4.jpg" alt="alternative">
+                                    <a href="images/avayaa.jpg" class="popup-link" data-effect="fadeIn">
+                                        <img class="img-fluid" src="images/avayaa.jpg" alt="Official website of Avayaa">
                                     </a>
                                     <a class="swiper-subtitle" target="_blank" href="https://avayaa.org">Avayaa</a>
                                 </div>
@@ -487,7 +494,7 @@
 
                                 <div class="swiper-slide">
                                     <div class="card">
-                                        <img class="card-image" src="images/client-1.jpg" alt="alternative">
+                                        <img class="card-image" src="images/client-1.jpg" alt="Official website of ">
                                         <div class="card-body">
                                             <p class="testimonial-text">Excellent service, reasonable price and fast response. We are very happy with the service.</p>
                                             <p class="testimonial-author"> Md. Ismail Hossain<br>Managing Director & CEO,<br>N. I. Engineering Services</p>
